lsp-8600/server/src/antrl/grammar/generate/grammar/TimingBlockParser.ts
// Generated from ./grammar/TimingBlock.g4 by ANTLR 4.13.2
// noinspection ES6UnusedImports,JSUnusedGlobalSymbols,JSUnusedLocalSymbols

import {
	ATN,
	ATNDeserializer, DecisionState, DFA, FailedPredicateException,
	RecognitionException, NoViableAltException, BailErrorStrategy,
	Parser, ParserATNSimulator,
	RuleContext, ParserRuleContext, PredictionMode, PredictionContextCache,
	TerminalNode, RuleNode,
	Token, TokenStream,
	Interval, IntervalSet
} from 'antlr4';
import TimingBlockListener from "./TimingBlockListener.js";
import TimingBlockVisitor from "./TimingBlockVisitor.js";

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;

export default class TimingBlockParser extends Parser {
	public static readonly TIMIINGS = 1;
	public static readonly WAVEFORM_TABLES = 2;
	public static readonly WAVEFORM_TABLE = 3;
	public static readonly SIGNAL = 4;
	public static readonly BREAK = 5;
	public static readonly USED = 6;
	public static readonly UNUSED = 7;
	public static readonly MAP = 8;
	public static readonly EQUATION_SETS = 9;
	public static readonly EQUATION_SET = 10;
	public static readonly EDGE_NAME = 11;
	public static readonly VAR_TYPE = 12;
	public static readonly PERIOD = 13;
	public static readonly SPEC_VARS = 14;
	public static readonly TIMING_SETS = 15;
	public static readonly TIMING_SET = 16;
	public static readonly SPECIFICATION_SETS = 17;
	public static readonly SPECIFICATION_SET = 18;
	public static readonly PORTS = 19;
	public static readonly XMODEValue = 20;
	public static readonly SALSH = 21;
	public static readonly L_BRACE = 22;
	public static readonly R_BRACE = 23;
	public static readonly L_BRACK = 24;
	public static readonly R_BRACK = 25;
	public static readonly L_PAR = 26;
	public static readonly R_PAR = 27;
	public static readonly SEMICOLON = 28;
	public static readonly EQUAL = 29;
	public static readonly COLON = 30;
	public static readonly ADD = 31;
	public static readonly SUB = 32;
	public static readonly MUL = 33;
	public static readonly DIV = 34;
	public static readonly ARROW = 35;
	public static readonly COMMA = 36;
	public static readonly WS = 37;
	public static readonly LINE_COMMENT = 38;
	public static readonly BLOCK_COMMENT = 39;
	public static readonly IDENTIFIER = 40;
	public static readonly INT = 41;
	public static readonly DOUBLE = 42;
	public static readonly EXP = 43;
	public static readonly UNIT = 44;
	public static override readonly EOF = Token.EOF;
	public static readonly RULE_timingBlock = 0;
	public static readonly RULE_timingBlockItem = 1;
	public static readonly RULE_waveformTablesBlock = 2;
	public static readonly RULE_waveformTableBlock = 3;
	public static readonly RULE_waveformTableName = 4;
	public static readonly RULE_xmodeValue = 5;
	public static readonly RULE_waveformTableBlockItem = 6;
	public static readonly RULE_signalExpr = 7;
	public static readonly RULE_expr = 8;
	public static readonly RULE_term = 9;
	public static readonly RULE_waveformItem = 10;
	public static readonly RULE_waveformCharItem = 11;
	public static readonly RULE_wfcChar = 12;
	public static readonly RULE_eventItem = 13;
	public static readonly RULE_eventEdgeName = 14;
	public static readonly RULE_eventType = 15;
	public static readonly RULE_breakItem = 16;
	public static readonly RULE_breakWfcs = 17;
	public static readonly RULE_usedBlock = 18;
	public static readonly RULE_wfcItem = 19;
	public static readonly RULE_wfc = 20;
	public static readonly RULE_unUsedBlock = 21;
	public static readonly RULE_mapBlock = 22;
	public static readonly RULE_wfcMapItem = 23;
	public static readonly RULE_mapBeforItem = 24;
	public static readonly RULE_mapAfterItem = 25;
	public static readonly RULE_equationSetsBlock = 26;
	public static readonly RULE_equationSetBlock = 27;
	public static readonly RULE_equationSetName = 28;
	public static readonly RULE_equationSetBlockItem = 29;
	public static readonly RULE_specVarsBlock = 30;
	public static readonly RULE_declarVarItem = 31;
	public static readonly RULE_varType = 32;
	public static readonly RULE_varName = 33;
	public static readonly RULE_timingSetsBlock = 34;
	public static readonly RULE_timingSetBlock = 35;
	public static readonly RULE_timingSetName = 36;
	public static readonly RULE_timingSetBlockItem = 37;
	public static readonly RULE_edgePositionItem = 38;
	public static readonly RULE_timeValueExpr = 39;
	public static readonly RULE_addExpr = 40;
	public static readonly RULE_mulExpr = 41;
	public static readonly RULE_atom = 42;
	public static readonly RULE_specificationSetsBlock = 43;
	public static readonly RULE_specificationSetBlock = 44;
	public static readonly RULE_specificationSetName = 45;
	public static readonly RULE_specificationSetBlockItem = 46;
	public static readonly RULE_specVarValueBlock = 47;
	public static readonly RULE_specNameValueItem = 48;
	public static readonly RULE_varValue = 49;
	public static readonly RULE_portsBlock = 50;
	public static readonly RULE_portNameExpr = 51;
	public static readonly RULE_portBlock = 52;
	public static readonly RULE_portName = 53;
	public static readonly literalNames: (string | null)[] = [ null, "'Timings'", 
                                                            "'WaveformTables'", 
                                                            "'WaveformTable'", 
                                                            "'Signal'", 
                                                            "'Break'", "'Used'", 
                                                            "'Unused'", 
                                                            "'Map'", "'EquationSets'", 
                                                            "'EquationSet'", 
                                                            null, null, 
                                                            "'Period'", 
                                                            "'SpecVars'", 
                                                            "'TimingSets'", 
                                                            "'TimingSet'", 
                                                            "'SpecificationSets'", 
                                                            "'SpecificationSet'", 
                                                            "'Ports'", null, 
                                                            "'//'", "'{'", 
                                                            "'}'", "'['", 
                                                            "']'", "'('", 
                                                            "')'", "';'", 
                                                            "'='", "':'", 
                                                            "'+'", "'-'", 
                                                            "'*'", "'/'", 
                                                            "'=>'", "','" ];
	public static readonly symbolicNames: (string | null)[] = [ null, "TIMIINGS", 
                                                             "WAVEFORM_TABLES", 
                                                             "WAVEFORM_TABLE", 
                                                             "SIGNAL", "BREAK", 
                                                             "USED", "UNUSED", 
                                                             "MAP", "EQUATION_SETS", 
                                                             "EQUATION_SET", 
                                                             "EDGE_NAME", 
                                                             "VAR_TYPE", 
                                                             "PERIOD", "SPEC_VARS", 
                                                             "TIMING_SETS", 
                                                             "TIMING_SET", 
                                                             "SPECIFICATION_SETS", 
                                                             "SPECIFICATION_SET", 
                                                             "PORTS", "XMODEValue", 
                                                             "SALSH", "L_BRACE", 
                                                             "R_BRACE", 
                                                             "L_BRACK", 
                                                             "R_BRACK", 
                                                             "L_PAR", "R_PAR", 
                                                             "SEMICOLON", 
                                                             "EQUAL", "COLON", 
                                                             "ADD", "SUB", 
                                                             "MUL", "DIV", 
                                                             "ARROW", "COMMA", 
                                                             "WS", "LINE_COMMENT", 
                                                             "BLOCK_COMMENT", 
                                                             "IDENTIFIER", 
                                                             "INT", "DOUBLE", 
                                                             "EXP", "UNIT" ];
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"timingBlock", "timingBlockItem", "waveformTablesBlock", "waveformTableBlock", 
		"waveformTableName", "xmodeValue", "waveformTableBlockItem", "signalExpr", 
		"expr", "term", "waveformItem", "waveformCharItem", "wfcChar", "eventItem", 
		"eventEdgeName", "eventType", "breakItem", "breakWfcs", "usedBlock", "wfcItem", 
		"wfc", "unUsedBlock", "mapBlock", "wfcMapItem", "mapBeforItem", "mapAfterItem", 
		"equationSetsBlock", "equationSetBlock", "equationSetName", "equationSetBlockItem", 
		"specVarsBlock", "declarVarItem", "varType", "varName", "timingSetsBlock", 
		"timingSetBlock", "timingSetName", "timingSetBlockItem", "edgePositionItem", 
		"timeValueExpr", "addExpr", "mulExpr", "atom", "specificationSetsBlock", 
		"specificationSetBlock", "specificationSetName", "specificationSetBlockItem", 
		"specVarValueBlock", "specNameValueItem", "varValue", "portsBlock", "portNameExpr", 
		"portBlock", "portName",
	];
	public get grammarFileName(): string { return "TimingBlock.g4"; }
	public get literalNames(): (string | null)[] { return TimingBlockParser.literalNames; }
	public get symbolicNames(): (string | null)[] { return TimingBlockParser.symbolicNames; }
	public get ruleNames(): string[] { return TimingBlockParser.ruleNames; }
	public get serializedATN(): number[] { return TimingBlockParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(this, TimingBlockParser._ATN, TimingBlockParser.DecisionsToDFA, new PredictionContextCache());
	}
	// @RuleVersion(0)
	public timingBlock(): TimingBlockContext {
		let localctx: TimingBlockContext = new TimingBlockContext(this, this._ctx, this.state);
		this.enterRule(localctx, 0, TimingBlockParser.RULE_timingBlock);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 108;
			this.match(TimingBlockParser.TIMIINGS);
			this.state = 109;
			this.match(TimingBlockParser.L_BRACE);
			this.state = 113;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 131588) !== 0)) {
				{
				{
				this.state = 110;
				this.timingBlockItem();
				}
				}
				this.state = 115;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 116;
			this.match(TimingBlockParser.R_BRACE);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public timingBlockItem(): TimingBlockItemContext {
		let localctx: TimingBlockItemContext = new TimingBlockItemContext(this, this._ctx, this.state);
		this.enterRule(localctx, 2, TimingBlockParser.RULE_timingBlockItem);
		try {
			this.state = 121;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 2:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 118;
				this.waveformTablesBlock();
				}
				break;
			case 9:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 119;
				this.equationSetsBlock();
				}
				break;
			case 17:
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 120;
				this.specificationSetsBlock();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public waveformTablesBlock(): WaveformTablesBlockContext {
		let localctx: WaveformTablesBlockContext = new WaveformTablesBlockContext(this, this._ctx, this.state);
		this.enterRule(localctx, 4, TimingBlockParser.RULE_waveformTablesBlock);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 123;
			this.match(TimingBlockParser.WAVEFORM_TABLES);
			this.state = 124;
			this.match(TimingBlockParser.L_BRACE);
			this.state = 128;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===3) {
				{
				{
				this.state = 125;
				this.waveformTableBlock();
				}
				}
				this.state = 130;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 131;
			this.match(TimingBlockParser.R_BRACE);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public waveformTableBlock(): WaveformTableBlockContext {
		let localctx: WaveformTableBlockContext = new WaveformTableBlockContext(this, this._ctx, this.state);
		this.enterRule(localctx, 6, TimingBlockParser.RULE_waveformTableBlock);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 133;
			this.match(TimingBlockParser.WAVEFORM_TABLE);
			this.state = 134;
			this.waveformTableName();
			this.state = 135;
			this.match(TimingBlockParser.L_BRACK);
			this.state = 136;
			this.xmodeValue();
			this.state = 137;
			this.match(TimingBlockParser.R_BRACK);
			this.state = 138;
			this.match(TimingBlockParser.L_BRACE);
			this.state = 142;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===4) {
				{
				{
				this.state = 139;
				this.waveformTableBlockItem();
				}
				}
				this.state = 144;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 145;
			this.match(TimingBlockParser.R_BRACE);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public waveformTableName(): WaveformTableNameContext {
		let localctx: WaveformTableNameContext = new WaveformTableNameContext(this, this._ctx, this.state);
		this.enterRule(localctx, 8, TimingBlockParser.RULE_waveformTableName);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 147;
			this.match(TimingBlockParser.IDENTIFIER);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public xmodeValue(): XmodeValueContext {
		let localctx: XmodeValueContext = new XmodeValueContext(this, this._ctx, this.state);
		this.enterRule(localctx, 10, TimingBlockParser.RULE_xmodeValue);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 149;
			this.match(TimingBlockParser.XMODEValue);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public waveformTableBlockItem(): WaveformTableBlockItemContext {
		let localctx: WaveformTableBlockItemContext = new WaveformTableBlockItemContext(this, this._ctx, this.state);
		this.enterRule(localctx, 12, TimingBlockParser.RULE_waveformTableBlockItem);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 151;
			this.match(TimingBlockParser.SIGNAL);
			this.state = 152;
			this.signalExpr();
			this.state = 153;
			this.match(TimingBlockParser.L_BRACE);
			this.state = 157;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 480) !== 0) || _la===40) {
				{
				{
				this.state = 154;
				this.waveformItem();
				}
				}
				this.state = 159;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 160;
			this.match(TimingBlockParser.R_BRACE);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public signalExpr(): SignalExprContext {
		let localctx: SignalExprContext = new SignalExprContext(this, this._ctx, this.state);
		this.enterRule(localctx, 14, TimingBlockParser.RULE_signalExpr);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 162;
			this.expr();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public expr(): ExprContext {
		let localctx: ExprContext = new ExprContext(this, this._ctx, this.state);
		this.enterRule(localctx, 16, TimingBlockParser.RULE_expr);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 164;
			this.term();
			this.state = 169;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (((((_la - 31)) & ~0x1F) === 0 && ((1 << (_la - 31)) & 35) !== 0)) {
				{
				{
				this.state = 165;
				_la = this._input.LA(1);
				if(!(((((_la - 31)) & ~0x1F) === 0 && ((1 << (_la - 31)) & 35) !== 0))) {
				this._errHandler.recoverInline(this);
				}
				else {
					this._errHandler.reportMatch(this);
				    this.consume();
				}
				this.state = 166;
				this.term();
				}
				}
				this.state = 171;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public term(): TermContext {
		let localctx: TermContext = new TermContext(this, this._ctx, this.state);
		this.enterRule(localctx, 18, TimingBlockParser.RULE_term);
		try {
			this.state = 177;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 40:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 172;
				this.match(TimingBlockParser.IDENTIFIER);
				}
				break;
			case 26:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 173;
				this.match(TimingBlockParser.L_PAR);
				this.state = 174;
				this.expr();
				this.state = 175;
				this.match(TimingBlockParser.R_PAR);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public waveformItem(): WaveformItemContext {
		let localctx: WaveformItemContext = new WaveformItemContext(this, this._ctx, this.state);
		this.enterRule(localctx, 20, TimingBlockParser.RULE_waveformItem);
		try {
			this.state = 184;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 40:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 179;
				this.waveformCharItem();
				}
				break;
			case 5:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 180;
				this.breakItem();
				}
				break;
			case 6:
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 181;
				this.usedBlock();
				}
				break;
			case 7:
				this.enterOuterAlt(localctx, 4);
				{
				this.state = 182;
				this.unUsedBlock();
				}
				break;
			case 8:
				this.enterOuterAlt(localctx, 5);
				{
				this.state = 183;
				this.mapBlock();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public waveformCharItem(): WaveformCharItemContext {
		let localctx: WaveformCharItemContext = new WaveformCharItemContext(this, this._ctx, this.state);
		this.enterRule(localctx, 22, TimingBlockParser.RULE_waveformCharItem);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 186;
			this.wfcChar();
			this.state = 187;
			this.match(TimingBlockParser.COLON);
			this.state = 189;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 188;
				this.eventItem();
				}
				}
				this.state = 191;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while (_la===11);
			this.state = 193;
			this.match(TimingBlockParser.SEMICOLON);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public wfcChar(): WfcCharContext {
		let localctx: WfcCharContext = new WfcCharContext(this, this._ctx, this.state);
		this.enterRule(localctx, 24, TimingBlockParser.RULE_wfcChar);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 195;
			this.match(TimingBlockParser.IDENTIFIER);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public eventItem(): EventItemContext {
		let localctx: EventItemContext = new EventItemContext(this, this._ctx, this.state);
		this.enterRule(localctx, 26, TimingBlockParser.RULE_eventItem);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 197;
			this.eventEdgeName();
			this.state = 198;
			this.match(TimingBlockParser.COLON);
			this.state = 199;
			this.eventType();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public eventEdgeName(): EventEdgeNameContext {
		let localctx: EventEdgeNameContext = new EventEdgeNameContext(this, this._ctx, this.state);
		this.enterRule(localctx, 28, TimingBlockParser.RULE_eventEdgeName);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 201;
			this.match(TimingBlockParser.EDGE_NAME);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public eventType(): EventTypeContext {
		let localctx: EventTypeContext = new EventTypeContext(this, this._ctx, this.state);
		this.enterRule(localctx, 30, TimingBlockParser.RULE_eventType);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 203;
			this.match(TimingBlockParser.IDENTIFIER);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public breakItem(): BreakItemContext {
		let localctx: BreakItemContext = new BreakItemContext(this, this._ctx, this.state);
		this.enterRule(localctx, 32, TimingBlockParser.RULE_breakItem);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 205;
			this.match(TimingBlockParser.BREAK);
			this.state = 206;
